--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,47 @@
+/*Custom style*/
 body {
     margin: 0;
     background-color: white;
+}
+/*Header*/
+.header{
+    background-color: #37373C;
+    height: 150px;
+    margin-left: 0.2%;
+    margin-right: 0.2%;
+}
+.header h1{
+    color: #F4D600;
+    font-size: 4.5em;
+    float: left;
+    background-color: #37373C;
+}
+.header p{
+    float: right;
+    padding-top: 70px;
+    background-color: #37373C;
+    color: #777;
+    font-size: 1.4em;
+}
+.header p span{
+    color: white;
+}
+.header-pic{
+    position: relative;
+}
+.header-pic img{
+    width: 100%;
+}
+.header-pic p{
+    position: absolute;
+    top:50px;
+    background-color: transparent;
+    font-size: 3.5em;
+    font-family: 'Noto Serif', serif;
+    padding-left: 20px;
+}
+#pad {
+    font-size: 1.3em;
+    margin-top: 400px;
+    color: #231911;
 }
