--- a/css/main.css
+++ b/css/main.css
@@ -45,3 +45,35 @@ body {
     margin-top: 400px;
     color: #231911;
 }
+/*main-block*/
+hr {
+    position: absolute;
+    color: red;
+}
+.main-block {
+    background-color: white;
+}
+.main-block h2 {
+    padding-top: 30px;
+    padding-bottom: 20px;
+    font-size: 2em;
+    margin-left: 60px;
+    font-family: 'Alegreya', serif;
+}
+.main-block p {
+    padding-left: 60px;
+    color: #777;
+    font-size: 1.9em;
+}
+.main-block button {
+    height: 60px;
+    width: 150px;
+    border-radius: 30px;
+    border-style:none;
+    margin-bottom: 50px;
+    margin-top: 30px;
+    color: white;
+    font-size: 1.3em;
+    margin-left: 60px;
+    background-color: #37373C;
+}
