--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ hr {
 }
 /*Title*/
 .title{
-    margin-top: 30px
+    margin-top: 30px;
 }
 .title img{
     position: relative;
@@ -128,7 +128,7 @@ hr {
 #text1 p{
     color: #777;
     font-size: 1.5em;
-    padding-left: 120px
+    padding-left: 120px;
 }
 /*Title2*/
 .title2{
@@ -153,7 +153,7 @@ hr {
     font-size: 1.5em;
     color: #777;
     padding-right: 200px;
-    padding-left: 90px
+    padding-left: 90px;
 }
 /*Space*/
 .space{
@@ -165,12 +165,12 @@ hr {
     text-align: center;
     padding-top: 3px;
     font-size: 2em;
-    color: white
+    color: white;
 }
 /*Title-goes*/
 .title-goes{
     background-color: white;
-    height: 200px
+    height: 200px;
 }
 .title-goes h5{
     font-size: 2em;
@@ -186,7 +186,7 @@ hr {
 /*Footer*/
 .footer{
     background-color: #37373C;
-    height: 120px
+    height: 120px;
 }
 .footer p{
     text-align: center;
