--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ body {
     top:50px;
     background-color: transparent;
     font-size: 3.5em;
-    font-family: 'Noto Serif', serif;
+    font-family: 'Merriweather', serif;
     padding-left: 20px;
 }
 #pad {
@@ -58,7 +58,7 @@ hr {
     padding-bottom: 20px;
     font-size: 2em;
     margin-left: 60px;
-    font-family: 'Alegreya', serif;
+    font-family: 'Cormorant Infant', serif;
 }
 .main-block p {
     padding-left: 60px;
@@ -100,7 +100,7 @@ hr {
     text-align: center;
     padding-top: 20px;
     font-size: 1.5em;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 .img-container p{
     padding-bottom: 20px;
@@ -123,7 +123,7 @@ hr {
 #text1 h5{
     font-size: 2em;
     padding-left: 120px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 #text1 p{
     color: #777;
@@ -147,7 +147,7 @@ hr {
 #text-title2 h5{
     font-size: 2em;
     padding-left: 90px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 #text-title2 p{
     font-size: 1.5em;
@@ -176,7 +176,7 @@ hr {
     font-size: 2em;
     padding-top: 20px;
     padding-left: 60px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 .title-goes p{
     color: #777;
